# py-uds-demo

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
docs/: source-manual.md
search/: search_index.json
source-manual/: index.html
src/py_uds_demo/: __main__.py
src/py_uds_demo/core/: server.py
src/py_uds_demo/interface/: gui.py  web.py
