[project]
name = "py-uds-demo"
version = "26.0.2"
description = "Learn and Practice UDS Protocol"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["python", "template"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "dearpygui",
    "nicegui[native]",
]

[dependency-groups]
dev = [
    "pyinstaller",
    "ruff",
    "pytest",
    "pytest-html",
    "pytest-sugar",
    "pytest-clarity",
    "pytest-cov",
    "pytest-watch",
    "mkdocs-puml",
    "mkdocs-exclude",
    "mkdocs-material<10",
    "mkdocs-jupyter",
    "mkdocstrings-python",
    "mkdocs-macros-plugin",
    "mkdocs-include-markdown-plugin",
    "pymdown-extensions",
]

[project.urls]
homepage = "https://github.com/chaitu-ycr/py-uds-demo"
repository = "https://github.com/chaitu-ycr/py-uds-demo"
documentation = "https://chaitu-ycr.github.io/py-uds-demo/"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
